@@ -3,7 +3,7 @@ import unittest
 import mock
 
 from ubiquity import upower
-from helpers import builtin_patch
+from helpers import builtin_patch, text_file_type
 
 class UPowerTests(unittest.TestCase):
     @builtin_patch('open')
@@ -13,7 +13,7 @@ class UPowerTests(unittest.TestCase):
         mock_exists.return_value = True
         mock_listdir.return_value = ['one']
 
-        magic = mock.MagicMock(spec=file)
+        magic = mock.MagicMock(spec=text_file_type)
         magic.__enter__.return_value = magic
         mock_open.return_value = magic
         magic.read.return_value = 'Battery'
